<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.goda.meraslidertask.view.ServiceProviderData">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></include>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/circleButtonLinearLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/serviceregisterationConditions"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/not_clicked_button"
                    android:text="1"/>

                <TextView
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/ConditionsLabel"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/servicemainDataActivityButton"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/not_clicked_button"
                    android:text="2" />

                <TextView
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/MainDataLabel"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/serviceclientDataButton"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/clicked_button"
                    android:text="3" />

                <TextView
                    android:id="@+id/client_data_circle_tv"
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/serviceProviderDataLabel"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/servicetheEndButton"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/not_clicked_button"
                    android:text="4"/>

                <TextView
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/EndLabel"

                    />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/serviceProviderDataLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:background="@drawable/linearlayout_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="5dp"
                android:background="#B0BEC5"
                android:paddingEnd="20dp"
                android:textSize="15sp"
                android:text="@string/addressLabel"
                />

            <EditText
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="القاهره ، شارع عثمان بن عفان" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layoutDirection="rtl"
            android:background="@drawable/linearlayout_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"
                android:background="#B0BEC5"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/neighborhoodLabel"
                />

            <EditText
                android:id="@+id/buildingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="القاهرة" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:background="@drawable/linearlayout_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"
                android:background="#B0BEC5"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/cityLabel"
                />


            <Spinner
                android:id="@+id/client_citySpinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                ></Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:background="@drawable/linearlayout_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="#B0BEC5"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/skillsLabel"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/chechBoxlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/laundry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkRadioButton"
                    android:text="@string/laundrySkills"
                    tools:ignore="OnClick" />

                <View
                    android:layout_width="200dp"
                    android:layout_height=".5dp"
                    android:layout_marginStart="10dp"
                    android:background="#000"></View>

                <RadioButton
                    android:id="@+id/houseCleaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkRadioButton"
                    android:text="@string/houseCleaningskills"
                    tools:ignore="OnClick" />

                <View
                    android:layout_width="200dp"
                    android:layout_height=".5dp"
                    android:layout_marginStart="10dp"
                    android:background="#000"></View>

                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/ironingClothes"
                    android:text="@string/ironingClothesSkills"
                    tools:ignore="OnClick"
                    android:onClick="checkRadioButton"/>

                <View
                    android:layout_width="200dp"
                    android:layout_height=".5dp"
                    android:layout_marginStart="10dp"
                    android:background="#000"></View>

                <RadioButton android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/babySitting"
                    android:text="@string/babySittingskills"
                    tools:ignore="OnClick"
                    android:onClick="checkRadioButton"/>

                <View
                    android:layout_width="200dp"
                    android:layout_height=".5dp"
                    android:layout_marginStart="10dp"
                    android:background="#000"></View>

                <RadioButton android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/careOfelderly"
                    android:text="@string/careOfelderlyskills"
                    tools:ignore="OnClick"
                    android:onClick="checkRadioButton"/>

                <View
                    android:layout_width="200dp"
                    android:layout_height=".5dp"
                    android:layout_marginStart="10dp"
                    android:background="#000"></View>

                <RadioButton android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/cooking"
                    android:text="@string/cookingskills"
                    tools:ignore="OnClick"
                    android:onClick="checkRadioButton"/>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/serviceNext"
            style="@style/nextButtonStyle"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>