<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="com.example.goda.meraslidertask.view.ClientData"
    android:orientation="vertical"
    android:id="@+id/clientDataScrollview">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></include>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/circleButtonLinearLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/registerationConditions"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/not_clicked_button"
                    android:text="1" />

                <TextView
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/ConditionsLabel"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/mainDataActivityButton"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/not_clicked_button"
                    android:text="2" />

                <TextView
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/MainDataLabel"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/clientDataButton"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/clicked_button"
                    android:text="3" />

                <TextView
                    android:id="@+id/client_data_circle_tv"
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/ClientLabel"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/circleButtonAndLabelLayout">

                <Button
                    android:id="@+id/theEndButton"
                    style="@style/circleButtonsStyle"
                    android:background="@drawable/not_clicked_button"
                    android:text="4" />

                <TextView
                    style="@style/circleButtonLabelsStyle"
                    android:text="@string/EndLabel"

                    />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/clientDataLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/dataEntryLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:background="#B0BEC5"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/clientAddressLabel"
                />

            <EditText
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                android:paddingStart="3dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="القاهرة ، شارع عثمان ابن عفان" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/dataEntryLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:background="#B0BEC5"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/clientBuildingNumberLabel" />

            <EditText
                android:id="@+id/buildingName"
                android:layout_width="wrap_content"
                android:paddingStart="3dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="545ج" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            style="@style/dataEntryLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#B0BEC5"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/clientCityLabel"
                android:textSize="15sp" />


            <Spinner
                android:id="@+id/client_citySpinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                ></Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            style="@style/dataEntryLable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="#B0BEC5"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/floorNumberLabel"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/floor_number"
                android:paddingStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="12" />

        </LinearLayout>

        <Button
            android:id="@+id/clientDataNextButton"
            style="@style/nextButtonStyle"
            android:layout_marginTop="30dp"
            android:onClick="next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>